# design_patterns

code/FactoryMethod/: CMakeLists.txt  ConcreteFactory2.h  ConcreteProduct2.h  main.cpp
